Retreived latest date, calculated one year previous, and queries one year of data. Than placed that data into a pandas df

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,37 +171,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2017', '08', '23']"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find the most recent date in the data set."
+    "# Find the most recent date in the data set.\n",
+    "max_date = session.query(func.max(Measurement.date)).all()\n",
+    "\n",
+    "#Get object as a string\n",
+    "max_date = [date[0] for date in max_date]\n",
+    "max_date = max_date[0]\n",
+    "\n",
+    "#Split string so that date can be inserted into a datetime()\n",
+    "max_date = max_date.split(\"-\")\n",
+    "\n",
+    "max_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precip</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-08-24</th>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-25</th>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-26</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-27</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-28</th>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-19</th>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-20</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-21</th>\n",
+       "      <td>0.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-22</th>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2223 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            precip\n",
+       "date              \n",
+       "2016-08-24    0.08\n",
+       "2016-08-25    0.08\n",
+       "2016-08-26    0.00\n",
+       "2016-08-27    0.00\n",
+       "2016-08-28    0.01\n",
+       "...            ...\n",
+       "2017-08-19    0.09\n",
+       "2017-08-20     NaN\n",
+       "2017-08-21    0.56\n",
+       "2017-08-22    0.50\n",
+       "2017-08-23    0.45\n",
+       "\n",
+       "[2223 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
+    "min_date = dt.datetime(int(max_date[0])-1, int(max_date[1]), int(max_date[2]))\n",
     "\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
+    "precip = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date > min_date).all()\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
+    "precip_df = pd.DataFrame(precip, columns=['date', 'precip'])\n",
     "\n",
+    "precip_df.set_index('date', inplace=True)\n",
     "\n",
     "# Sort the dataframe by date\n",
+    "precip_df.sort_values('date')\n",
     "\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n",
-    "\n",
-    "\n"
+    "# Use Pandas Plotting with Matplotlib to plot the data\n"
    ]
   },
   {
