Completed temperature challenge 1

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,21 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7f80ea160f28>,\n",
-       " 'prcp': 0.08,\n",
-       " 'station': 'USC00519397',\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7fe0a525a518>,\n",
        " 'tobs': 65.0,\n",
        " 'date': '2010-01-01',\n",
-       " 'id': 1}"
+       " 'id': 1,\n",
+       " 'prcp': 0.08,\n",
+       " 'station': 'USC00519397'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,22 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7f80ea1a5710>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7fe0a525ac88>,\n",
        " 'elevation': 3.0,\n",
        " 'latitude': 21.2716,\n",
-       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       " 'station': 'USC00519397',\n",
        " 'id': 1,\n",
        " 'longitude': -157.8168,\n",
-       " 'station': 'USC00519397'}"
+       " 'name': 'WAIKIKI 717.2, HI US'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "['2017', '08', '23']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
     "max_date = max_date[0]\n",
     "\n",
     "#Split string so that date can be inserted into a datetime()\n",
-    "max_date = max_date.split(\"-\")\n",
+    "max_date = max_date.split('-')\n",
     "\n",
     "max_date"
    ]
