--- a/temp_analysis_bonus_1_starter.ipynb
+++ b/temp_analysis_bonus_1_starter.ipynb
@@ -9,50 +9,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from datetime import datetime as dt"
+    "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station        date  prcp  tobs\n",
+       "0  USC00519397  2010-01-01  0.08    65\n",
+       "1  USC00519397  2010-01-02  0.00    63\n",
+       "2  USC00519397  2010-01-03  0.00    74\n",
+       "3  USC00519397  2010-01-04  0.00    76\n",
+       "4  USC00519397  2010-01-06   NaN    73"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# \"tobs\" is \"temperature observations\"\n",
-    "df = pd.read_csv('hawaii_measurements.csv')\n",
+    "df = pd.read_csv('Resources/hawaii_measurements.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Series' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-ef5f9baa6e4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'datetime'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetimes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'Series' object is not callable"
+     ]
+    }
+   ],
    "source": [
-    "# Convert the date column format from string to datetime"
+    "# Convert the date column format from string to datetime\n",
+    "datetimes = []\n",
+    "for date in df['date']:\n",
+    "    date_list = date.split(\"-\")\n",
+    "    datetime_obj = dt.datetime(int(date_list[0]), int(date_list[1]), int(date_list[2]))\n",
+    "    datetimes.append(datetime_obj)\n",
+    "df['datetime'] = datetimes\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-03</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-04</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-19</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2017-08-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-20</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "      <td>2017-08-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-21</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2017-08-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-22</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2017-08-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2017-08-23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19550 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                station  prcp  tobs   datetime\n",
+       "date                                          \n",
+       "2010-01-01  USC00519397  0.08    65 2010-01-01\n",
+       "2010-01-02  USC00519397  0.00    63 2010-01-02\n",
+       "2010-01-03  USC00519397  0.00    74 2010-01-03\n",
+       "2010-01-04  USC00519397  0.00    76 2010-01-04\n",
+       "2010-01-06  USC00519397   NaN    73 2010-01-06\n",
+       "...                 ...   ...   ...        ...\n",
+       "2017-08-19  USC00516128  0.09    71 2017-08-19\n",
+       "2017-08-20  USC00516128   NaN    78 2017-08-20\n",
+       "2017-08-21  USC00516128  0.56    76 2017-08-21\n",
+       "2017-08-22  USC00516128  0.50    76 2017-08-22\n",
+       "2017-08-23  USC00516128  0.45    76 2017-08-23\n",
+       "\n",
+       "[19550 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Set the date column as the DataFrame index"
+    "# Set the date column as the DataFrame index\n",
+    "df.set_index('date')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2010-01-01\n",
+       "1       2010-01-02\n",
+       "2       2010-01-03\n",
+       "3       2010-01-04\n",
+       "4       2010-01-06\n",
+       "           ...    \n",
+       "19545   2017-08-19\n",
+       "19546   2017-08-20\n",
+       "19547   2017-08-21\n",
+       "19548   2017-08-22\n",
+       "19549   2017-08-23\n",
+       "Name: datetime, Length: 19550, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Drop the date column"
+    "# Drop the date column\n",
+    "del df['date']"
    ]
   },
   {
@@ -64,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,47 +338,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter data for desired months"
+    "# Filter data for desired months\n",
+    "june_data = df[df['datetime'].dt.month == 6]\n",
+    "dec_data = df[df['datetime'].dt.month == 12]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.94"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Identify the average temperature for June"
+    "# Identify the average temperature for June\n",
+    "june_avg = round(june_data['tobs'].mean(), 2)\n",
+    "\n",
+    "june_avg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71.04"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Identify the average temperature for December"
+    "# Identify the average temperature for December\n",
+    "dec_avg = round(dec_data['tobs'].mean(), 2)\n",
+    "\n",
+    "dec_avg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create collections of temperature data"
+    "# Create collections of temperature data\n",
+    "\n",
+    "june_temps = june_data['tobs'].sample(500)\n",
+    "dec_temps = dec_data['tobs'].sample(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=18.0014900500911, pvalue=3.3924833421561495e-56)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Run paired t-test"
+    "# Run paired t-test\n",
+    "stats.ttest_rel(june_temps, dec_temps)"
    ]
   },
   {
@@ -121,6 +431,14 @@
    "metadata": {},
    "source": [
     "### Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I used a two-sided t-test, because the calculated mean difference could be lower or higher, so we need both sides to capture any differences. \n",
+    "The t-test yielded a p-value of essentially 0, meaning that there is a statistically significant difference between the mean temperature in June and December. "
    ]
   },
   {
@@ -147,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
