Deleted temp analysis 2 file

--- a/temp_analysis_bonus_1_starter.ipynb
+++ b/temp_analysis_bonus_1_starter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "4  USC00519397  2010-01-06   NaN    73"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,19 +111,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Series' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-60-ef5f9baa6e4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'datetime'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetimes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'Series' object is not callable"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station        date  prcp  tobs   datetime\n",
+       "0  USC00519397  2010-01-01  0.08    65 2010-01-01\n",
+       "1  USC00519397  2010-01-02  0.00    63 2010-01-02\n",
+       "2  USC00519397  2010-01-03  0.00    74 2010-01-03\n",
+       "3  USC00519397  2010-01-04  0.00    76 2010-01-04\n",
+       "4  USC00519397  2010-01-06   NaN    73 2010-01-06"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -140,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +353,7 @@
        "[19550 rows x 4 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,31 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       2010-01-01\n",
-       "1       2010-01-02\n",
-       "2       2010-01-03\n",
-       "3       2010-01-04\n",
-       "4       2010-01-06\n",
-       "           ...    \n",
-       "19545   2017-08-19\n",
-       "19546   2017-08-20\n",
-       "19547   2017-08-21\n",
-       "19548   2017-08-22\n",
-       "19549   2017-08-23\n",
-       "Name: datetime, Length: 19550, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop the date column\n",
     "del df['date']"
@@ -329,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +411,7 @@
        "74.94"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +434,7 @@
        "71.04"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,16 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_relResult(statistic=18.0014900500911, pvalue=3.3924833421561495e-56)"
+       "Ttest_relResult(statistic=17.834314043605033, pvalue=2.111319510112886e-55)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
